src/index.css
@import './styles/reset.css';
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');

:root {
  /* font */
  --main-font-family: 'Montserrat', sans-serif;
  --font-size-base: 16px;

  --regular-font-weight: 400;
  --medium-font-weight: 500;
  --semibold-font-weight: 600;
  --bold-font-weight: 700;

  /* color */
  --black: #000000;
  --white: #ffffff;
  --dark-brown: #3d2218;
  --brown: #6d554b;
  --light-brown: #9b6c43;
  --gray: #595d62;
  --light-grey: #9f9f9f;
  --red: #c80000;
  --background: #fbfcf8;
  --light-beige: #faf3e0;

  --background-gradient: linear-gradient(
    90deg,
    rgba(0, 0, 0, 0.9) 0%,
    rgba(0, 0, 0, 0.3) 100%
  );

  /* responsiveness */
  --pre-mobile: 392.98px;
  --mobile: 393px;
  --pre-tablet: 767.98px;
  --tablet: 768px;
  --pre-desktop: 1439.98px;
  --desktop: 1440px;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  font-family: var(--main-font-family);
  color: var(--black);
  font-size: var(--font-size-base);
  font-style: normal;
  font-weight: var(--regular-font-weight);
  line-height: 25px;
  background-color: var(--background);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.container {
  padding: 0 16px;
  margin: 0 auto;
}

@media screen and (min-width: 768px) {
  .container {
    padding: 0 32px;
  }
}

@media screen and (min-width: 1440px) {
  .container {
    padding: 0 108px;
  }
}

.section {
  padding: 48px 0;
}

